--- a/frontend/css/_record.scss
+++ b/frontend/css/_record.scss
@@ -165,6 +165,10 @@
 				.grabar {
 					margin-bottom: 25px;
 					margin-top: 30px;
+
+					.ios-form {
+						display: none;
+					}
 				}
 
 				.btn-stop {
