--- a/frontend/css/_record.scss
+++ b/frontend/css/_record.scss
@@ -189,8 +189,10 @@
 					@include cross-browser(transform, scale(1));
 					@include cross-browser(transition, transform linear .1s);
 
-					&:hover {
-						@include cross-browser(transform, scale(1.15));
+					@media screen and (min-width: $screen-xs) {
+						&:hover {
+							@include cross-browser(transform, scale(1.15));
+						}
 					}
 
 					&:active, &:focus {
