--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -515,16 +515,30 @@ body {
       @media screen and (max-width: 580px) {
         #record .wrapper .content {
           border: none;
+          padding-left: 0px;
+          padding-right: 0px;
           -ms-border-radius: 0;
           -o-border-radius: 0;
           -moz-border-radius: 0;
           -webkit-border-radius: 0;
           border-radius: 0; }
+          #record .wrapper .content .row {
+            margin-left: 0px;
+            margin-right: 0px; }
           #record .wrapper .content .movil-ajust {
             padding-left: 0px;
             padding-right: 0px; }
             #record .wrapper .content .movil-ajust .pilucho-wrapper {
               max-width: initial; }
+            #record .wrapper .content .movil-ajust.cont {
+              position: absolute;
+              width: 100%;
+              background-color: #fff;
+              bottom: 0px; }
+              #record .wrapper .content .movil-ajust.cont .grabar {
+                color: #E2383C; }
+              #record .wrapper .content .movil-ajust.cont .guardar {
+                color: #0978BE; }
           #record .wrapper .content .title {
             margin-bottom: 20px; } }
 
