--- a/frontend/css/_agegate.scss
+++ b/frontend/css/_agegate.scss
@@ -29,20 +29,33 @@
 			bottom: 0px;
 			background: url(../img/home/movil/pilucho.png);
 			background-size: 100% auto;
-			height: 466px;
-			max-height: 100%;
-			padding-top: 190px;
+			margin-top: 0px;
+			width: 100%;
+
+			&:before {
+				content: '';
+				display: block;
+				padding-top: 140%;
+			}
+
+			.content {
+				position: absolute;
+				bottom: 0px;
+				left: 0px;
+				width: 100%;
+				padding: 0 15px 10px;
+			}
 
 			.title {
 				margin-bottom: 0px;
 			}
 
 			p {
-				margin-bottom: 20px;
+				margin-bottom: 10px;
 			}
 
 			button {
-				margin: 10px 0;
+				margin: 10px 0 0px;
 			}
 		}
 	}
