--- a/frontend/css/_agegate.scss
+++ b/frontend/css/_agegate.scss
@@ -5,13 +5,21 @@
 	width: 100%;
 	height: 100%;
 	z-index: 3000;
+	text-align: left;
+	background-color: $color-red;
+
+	.logo {
+		margin-top: 15px;
+		margin-left: 20px;
+	}
 
 	.container {
-		margin-top: 10%;
+		margin-top: 7%;
 
 		.title {
 			margin-bottom: 40px;
 			max-width: 100%;
+			width: 620px;
 		}
 
 		p {
