--- a/frontend/css/_agegate.scss
+++ b/frontend/css/_agegate.scss
@@ -13,6 +13,20 @@
 		margin-left: 20px;
 	}
 
+	@media screen and (max-width: $screen-xs) {
+		text-align: center;
+		background: url(../img/agegate/movil/bg.jpg);
+		background-size: 100% auto;
+
+		.logo {
+			margin-left: 0px;
+		}
+
+		.backstretch {
+			display: none;
+		}
+	}
+
 	.container {
 		margin-top: 7%;
 
@@ -35,8 +49,6 @@
 		@media screen and (max-width: $screen-xs) {
 			position: absolute;
 			bottom: 0px;
-			background: url(../img/home/movil/pilucho.png);
-			background-size: 100% auto;
 			margin-top: 0px;
 			width: 100%;
 
@@ -51,7 +63,7 @@
 				bottom: 0px;
 				left: 0px;
 				width: 100%;
-				padding: 0 15px 10px;
+				padding: 0 15px 30px;
 			}
 
 			.title {
