--- a/frontend/css/_record.scss
+++ b/frontend/css/_record.scss
@@ -247,11 +247,17 @@
 				padding-top: 40px;
 
 				p {
-					margin: 20px 45px 0;
+					margin: 20px 45px 30px;
 					font-size: 16px;
 
 					&.mas {
 						margin-top: 50px;
+					}
+				}
+
+				.buttons {
+					button {
+						margin: 0px 10px;;
 					}
 				}
 
@@ -268,7 +274,15 @@
 						font-size: 18px;
 
 						&.mas {
-							margin-top: 60px;
+							margin-top: 50px;
+							margin-bottom: 30px;
+						}
+					}
+
+					.buttons {
+						button {
+							width: 90%;
+							margin: 10px 0px;
 						}
 					}
 
