--- a/frontend/css/_galeria.scss
+++ b/frontend/css/_galeria.scss
@@ -175,4 +175,133 @@
 		height: 26px;
 		background: url(../img/galeria/separador-bottom.png);
 	}
+
+	#single-view {
+		display: block;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: url(../img/velo.png);
+		z-index: 3000;
+
+		.wrapper {
+			max-width: 90%;
+			width: 300px;
+			position: relative;
+			margin: 4% auto 0;
+
+			.content-single {
+				width: 100%;
+				height: 100%;
+				background-color: $color-blue;
+				border: 1px solid $color-white;
+				@include cross-browser(border-radius, 5px);
+				padding: 20px;
+
+				img.btn-close {
+					position: absolute;
+					top: -13px;
+	    			right: -17px;
+					cursor: pointer;
+					width: 46px;
+					@include cross-browser(transform, scale(1));
+					@include cross-browser(transition, transform linear .1s);
+
+					&:hover {
+						@include cross-browser(transform, scale(1.15));
+					}
+
+					&:active, &:focus {
+						@include cross-browser(transform, scale(1));
+					}
+				}
+
+				.block {
+					position: relative;
+					width: 100%;
+					height: 100%;
+
+					.user {
+						font-size: 14px;
+						vertical-align: middle;
+						margin-bottom: 10px;
+
+						img {
+							@include cross-browser(border-radius, 50%);
+						}
+					}
+
+					.player {
+
+						.fake {
+							width: 100%;
+						}
+
+						img.play {
+							position: absolute;
+							top: 50%;
+							left: 0;
+							right: 0;
+							margin-left: auto;
+							margin-right: auto;
+							cursor: pointer;
+
+							&.playing {
+								display: none;
+							}
+						}
+
+						.boca {
+							width: 60px;
+							height: 35.604px;
+							background: url(../img/boca.png);
+							background-position: 0 0;
+							background-size: 100% auto;
+							position: absolute;
+							top: 51%;
+							left: 0;
+							right: 0;
+							margin-left: auto;
+							margin-right: auto;
+
+							&.middle {
+								background-position-y: 71.208px;
+							}
+
+							&.open {
+								background-position-y: 35.604px;
+							}
+						}
+					}
+
+					.share {
+						margin-top: 30px;
+
+						a {
+							margin: 0 5px;
+
+							img {
+								@include cross-browser(transform, rotate(0deg));
+								@include cross-browser(transition, transform linear .3s);
+
+								&:hover {
+									@include cross-browser(transform, rotate(360deg));
+								}
+							}
+						}
+					}
+				}
+			}
+
+			@media screen and (max-width: $screen-xs) {
+				margin-top: 10%;
+
+				.content-single {
+					padding: 20px 10px 20px;
+				}
+			}
+		}
+	}
 }
