--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -761,6 +761,127 @@ body {
     width: 100%;
     height: 26px;
     background: url(../img/galeria/separador-bottom.png); }
+  #galeria #single-view {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: url(../img/velo.png);
+    z-index: 3000; }
+    #galeria #single-view .wrapper {
+      max-width: 90%;
+      width: 300px;
+      position: relative;
+      margin: 4% auto 0; }
+      #galeria #single-view .wrapper .content-single {
+        width: 100%;
+        height: 100%;
+        background-color: #0978BE;
+        border: 1px solid #fff;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 5px;
+        border-radius: 5px;
+        padding: 20px; }
+        #galeria #single-view .wrapper .content-single img.btn-close {
+          position: absolute;
+          top: -13px;
+          right: -17px;
+          cursor: pointer;
+          width: 46px;
+          -ms-transform: scale(1);
+          -o-transform: scale(1);
+          -moz-transform: scale(1);
+          -webkit-transform: scale(1);
+          transform: scale(1);
+          -ms-transition: transform linear 0.1s;
+          -o-transition: transform linear 0.1s;
+          -moz-transition: transform linear 0.1s;
+          -webkit-transition: transform linear 0.1s;
+          transition: transform linear 0.1s; }
+          #galeria #single-view .wrapper .content-single img.btn-close:hover {
+            -ms-transform: scale(1.15);
+            -o-transform: scale(1.15);
+            -moz-transform: scale(1.15);
+            -webkit-transform: scale(1.15);
+            transform: scale(1.15); }
+          #galeria #single-view .wrapper .content-single img.btn-close:active, #galeria #single-view .wrapper .content-single img.btn-close:focus {
+            -ms-transform: scale(1);
+            -o-transform: scale(1);
+            -moz-transform: scale(1);
+            -webkit-transform: scale(1);
+            transform: scale(1); }
+        #galeria #single-view .wrapper .content-single .block {
+          position: relative;
+          width: 100%;
+          height: 100%; }
+          #galeria #single-view .wrapper .content-single .block .user {
+            font-size: 14px;
+            vertical-align: middle;
+            margin-bottom: 10px; }
+            #galeria #single-view .wrapper .content-single .block .user img {
+              -ms-border-radius: 50%;
+              -o-border-radius: 50%;
+              -moz-border-radius: 50%;
+              -webkit-border-radius: 50%;
+              border-radius: 50%; }
+          #galeria #single-view .wrapper .content-single .block .player .fake {
+            width: 100%; }
+          #galeria #single-view .wrapper .content-single .block .player img.play {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            cursor: pointer; }
+            #galeria #single-view .wrapper .content-single .block .player img.play.playing {
+              display: none; }
+          #galeria #single-view .wrapper .content-single .block .player .boca {
+            width: 60px;
+            height: 35.604px;
+            background: url(../img/boca.png);
+            background-position: 0 0;
+            background-size: 100% auto;
+            position: absolute;
+            top: 51%;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto; }
+            #galeria #single-view .wrapper .content-single .block .player .boca.middle {
+              background-position-y: 71.208px; }
+            #galeria #single-view .wrapper .content-single .block .player .boca.open {
+              background-position-y: 35.604px; }
+          #galeria #single-view .wrapper .content-single .block .share {
+            margin-top: 30px; }
+            #galeria #single-view .wrapper .content-single .block .share a {
+              margin: 0 5px; }
+              #galeria #single-view .wrapper .content-single .block .share a img {
+                -ms-transform: rotate(0deg);
+                -o-transform: rotate(0deg);
+                -moz-transform: rotate(0deg);
+                -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
+                -ms-transition: transform linear 0.3s;
+                -o-transition: transform linear 0.3s;
+                -moz-transition: transform linear 0.3s;
+                -webkit-transition: transform linear 0.3s;
+                transition: transform linear 0.3s; }
+                #galeria #single-view .wrapper .content-single .block .share a img:hover {
+                  -ms-transform: rotate(360deg);
+                  -o-transform: rotate(360deg);
+                  -moz-transform: rotate(360deg);
+                  -webkit-transform: rotate(360deg);
+                  transform: rotate(360deg); }
+      @media screen and (max-width: 580px) {
+        #galeria #single-view .wrapper {
+          margin-top: 10%; }
+          #galeria #single-view .wrapper .content-single {
+            padding: 20px 10px 20px; } }
 
 #premios {
   position: relative;
