--- a/frontend/css/_kit.scss
+++ b/frontend/css/_kit.scss
@@ -6,7 +6,7 @@
 	background: url(../img/kit/challa.png);
 
 	.container {
-		max-width: 915px;
+		max-width: 1000px;
 	}
 
 	p {
@@ -15,6 +15,10 @@
 		margin: 30px auto 0px;;
 		left: 0;
 		right: 0;
+	}
+
+	img {
+		max-width: 100%;
 	}
 
 	.row {
