UPDATE: Se agrega funcionalidad para cargar imágenes antes de mostrar el sitio

--- a/frontend/css/_home.scss
+++ b/frontend/css/_home.scss
@@ -2,6 +2,9 @@
 	position: relative;
 	display: block;
 	padding-top: 130px;
+	background: url(../img/home/bg.jpg);
+	background-size: auto 100%;
+	background-position: center;
 
 	@media screen and (max-width: $screen-xs) {
 		padding-top: 30px;
