--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -127,6 +127,11 @@ body {
 	}
 }
 
+.no-animate {
+	-webkit-transition: none !important;
+	transition: none !important;
+}
+
 @import "loader";
 @import "menu";
 @import "agegate";
