--- a/frontend/css/_footer.scss
+++ b/frontend/css/_footer.scss
@@ -6,6 +6,10 @@
 	margin-top: -77px;
 	background: url(../img/footer/hinchas.png);
 
+	@media screen and (max-width: $screen-xs) {
+		height: 220px;
+	}
+
 	.content {
 		color: $color-white;
 		padding-top: 110px;
@@ -33,7 +37,8 @@
 
 			@media screen and (max-width: $screen-xs) {
 				position: relative;
-				margin-top: 10px;
+				margin-top: 20px;
+				margin-bottom: 0px;
 			}
 		}
 
@@ -45,7 +50,7 @@
 				display: block;
 				margin: 0 auto;
 				text-align: center;
-				margin-bottom: 10px;
+				margin-bottom: 20px;
 			}
 		}
 
