--- a/frontend/css/_ganadores.scss
+++ b/frontend/css/_ganadores.scss
@@ -169,6 +169,11 @@
 				font-size: 25px;
 				max-width: 380px;
 				margin: 30px auto 0;
+
+				&.sorteo {
+					font-size: 15px;
+					margin-top: 10px;
+				}
 			}
 		}
 
