--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1127,6 +1127,9 @@ body {
         font-size: 25px;
         max-width: 380px;
         margin: 30px auto 0; }
+        #ganadores .super .content p.sorteo {
+          font-size: 15px;
+          margin-top: 10px; }
     @media screen and (max-width: 580px) {
       #ganadores .super {
         background: url(../img/ganadores/movil/bg-super.png);
